<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AlaisPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/logo_text_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/logo_border"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@raw/logo_first"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImage"/>

            <TextView
                android:id="@+id/revelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/roboto_slab"
                android:letterSpacing="0.05"
                android:text="@string/confess"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/introText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_details"
            android:fontFamily="@font/roboto_slab"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/logo_text_container"
            app:layout_constraintStart_toStartOf="@id/logo_text_container" />

        <TextView
            android:id="@+id/introText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_details_correctly_to_join_the_world"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:textColor="#F4E7E1"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/introText"
            app:layout_constraintStart_toStartOf="@id/introText" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/introText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/createAccountButton">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <LinearLayout
                   android:id="@+id/aliasPanel"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/enter_the_alias_name"
                       android:fontFamily="@font/roboto_slab"
                       android:textStyle="bold"
                       android:layout_marginBottom="5dp"
                       android:textColor="@color/white"
                       android:textSize="15sp"/>

                   <EditText
                       android:id="@+id/aliasName"
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:background="@drawable/text_field"
                       android:textSize="15sp"
                       android:padding="10dp"
                       android:textColor="@color/white"
                       android:fontFamily="@font/droid_serif"
                       android:hint="@string/alias_name"
                       android:textColorHint="@color/grey"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/alias_name_can_t_be_chnaged_once_done"
                       android:layout_marginTop="5dp"
                       android:fontFamily="@font/poppins"
                       android:textColor="#FFC107"
                       android:layout_gravity="end"/>

               </LinearLayout>

               <LinearLayout
                   android:id="@+id/passwordToggle"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="15dp"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/aliasPanel">

                   <ImageView
                       android:id="@+id/lockIcon"
                       android:layout_width="40dp"
                       android:layout_height="40dp"
                       android:layout_marginTop="3dp"
                       android:contentDescription="@string/lock_icon"
                       android:layout_gravity="center"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/do_you_need_your_account_password_protected"
                       android:fontFamily="@font/roboto_slab"
                       android:textStyle="bold"
                       android:layout_gravity="center"
                       android:layout_marginStart="5dp"
                       android:textColor="@color/white"
                       android:textSize="15sp"/>

               </LinearLayout>

               <LinearLayout
                   android:id="@+id/passwordPanel"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="10dp"
                   android:visibility="gone"
                   app:layout_constraintTop_toBottomOf="@id/passwordToggle"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/enter_your_password"
                       android:fontFamily="@font/roboto_slab"
                       android:textStyle="bold"
                       android:layout_marginBottom="5dp"
                       android:textColor="@color/white"
                       android:textSize="15sp"/>

                   <EditText
                       android:id="@+id/password"
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:background="@drawable/text_field"
                       android:textSize="15sp"
                       android:padding="10dp"
                       android:textColor="@color/white"
                       android:fontFamily="@font/droid_serif"
                       android:hint="@string/password"
                       android:textColorHint="@color/grey"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/password_will_be_required_at_each_login"
                       android:layout_marginTop="5dp"
                       android:fontFamily="@font/poppins"
                       android:textColor="#FFC107"
                       android:layout_gravity="end"/>

               </LinearLayout>

           </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttond_design"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_slab"
                android:textSize="20sp"
                android:text="@string/create_account"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>