<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UpdateAbout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/logo_text_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/logo_border"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@raw/logo_first"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImage"/>

            <TextView
                android:id="@+id/revelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/roboto_slab"
                android:letterSpacing="0.05"
                android:text="@string/confess"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/introText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_about"
            android:fontFamily="@font/roboto_slab"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/logo_text_container"
            app:layout_constraintStart_toStartOf="@id/logo_text_container" />

        <TextView
            android:id="@+id/introText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_the_bold_message_as_you_are_because_no_one_knows_who_you_are"
            android:textSize="15sp"
            android:textColor="#F4E7E1"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/introText"
            app:layout_constraintStart_toStartOf="@id/introText" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/introText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/checkPasswordButton">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/aliasPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:fontFamily="@font/roboto_slab"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"/>

                    <LinearLayout
                        android:id="@+id/passwordEntryPanel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/text_field">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <EditText
                                android:id="@+id/about"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:textSize="15sp"
                                android:padding="10dp"
                                android:background="@drawable/filed_eraser"
                                android:inputType="textPassword"
                                android:textColor="@color/white"
                                android:fontFamily="@font/droid_serif"
                                android:maxLength="50"
                                android:hint="@string/express_your_statement"
                                android:layout_marginEnd="10dp"
                                android:textColorHint="@color/grey"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/wordCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    android:textColor="@color/yellow"
                    android:text="@string/_0_50"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="@id/aliasPanel"
                    app:layout_constraintTop_toBottomOf="@id/aliasPanel"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/updateAboutButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttond_design"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_slab"
                android:textSize="20sp"
                android:text="@string/update_about_btn"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>