<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".TermsAndCondition">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

            <LinearLayout
                android:id="@+id/logo_text_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/logo_border"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@raw/logo_first"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/CircleImage"/>

                <TextView
                    android:id="@+id/revelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/roboto_slab"
                    android:letterSpacing="0.05"
                    android:text="@string/confess"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

        <TextView
            android:id="@+id/introText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_condition"
            android:fontFamily="@font/roboto_slab"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/logo_text_container"
            app:layout_constraintStart_toStartOf="@id/logo_text_container" />

        <TextView
            android:id="@+id/introText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_carefully_and_accept_these_terms_and_condition_to_begin_with_us"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:textColor="#F4E7E1"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/introText"
            app:layout_constraintStart_toStartOf="@id/introText" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/introText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/GoogleButton">

            <ListView
                android:id="@+id/listView"
                android:divider="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/acceptBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <CheckBox
                android:id="@+id/termAccept"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:buttonTint="@color/check_box"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/check_the_box_to_accept_the_terms_and_condition"/>

        </LinearLayout>


        <FrameLayout
            android:id="@+id/GoogleButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttond_design"
            app:layout_constraintBottom_toTopOf="@id/acceptBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/buttonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_slab"
                    android:textSize="20sp"
                    android:text="@string/sign_in_with_google"/>

            </LinearLayout>

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>